After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740674 - mpegts: some compiler warnings with apple-gcc42
mpegts: some compiler warnings with apple-gcc42
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-25 08:18 UTC by Julien Isorce
Modified: 2014-11-25 21:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mpegts: fix some compiler warnings (5.33 KB, patch)
2014-11-25 08:26 UTC, Julien Isorce
committed Details | Review

Description Julien Isorce 2014-11-25 08:18:57 UTC
With latest gcc from macport (apple-gcc42), it currently fails to build 
libcodecparsersbad because of the following warning:

  CC       libgstmpegts_1.0_la-gstmpegtsdescriptor.lo
  CC       libgstmpegts_1.0_la-gst-dvb-descriptor.lo
cc1: warnings being treated as errors
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_stuffing':
gst-dvb-descriptor.c:181: warning: comparison is always false due to limited range of data type
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_teletext_idx':
gst-dvb-descriptor.c:875: warning: comparison is always false due to limited range of data type
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_teletext_nb':
gst-dvb-descriptor.c:910: warning: comparison is always false due to limited range of data type
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_subtitling_idx':
gst-dvb-descriptor.c:941: warning: comparison is always false due to limited range of data type
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_subtitling_nb':
gst-dvb-descriptor.c:976: warning: comparison is always false due to limited range of data type
cc1: warnings being treated as errors
gstmpegtsdescriptor.c: In function 'gst_mpegts_descriptor_parse_iso_639_language':
gstmpegtsdescriptor.c:972: warning: comparison is always false due to limited range of data type
gstmpegtsdescriptor.c: In function 'gst_mpegts_descriptor_parse_iso_639_language_idx':
gstmpegtsdescriptor.c:1014: warning: comparison is always false due to limited range of data type
gstmpegtsdescriptor.c: In function 'gst_mpegts_descriptor_parse_iso_639_language_nb':
gstmpegtsdescriptor.c:1043: warning: comparison is always false due to limited range of data type
gstmpegtsdescriptor.c: In function 'gst_mpegts_descriptor_parse_logical_channel':
gstmpegtsdescriptor.c:1066: warning: comparison is always false due to limited range of data type
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_content':
gst-dvb-descriptor.c:1284: warning: comparison is always false due to limited range of data type
gst-dvb-descriptor.c: In function 'gst_mpegts_descriptor_parse_dvb_parental_rating':
gst-dvb-descriptor.c:1333: warning: comparison is always false due to limited range of data type
make[1]: *** [libgstmpegts_1.0_la-gstmpegtsdescriptor.lo] Error 1
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [libgstmpegts_1.0_la-gst-dvb-descriptor.lo] Error 1
Comment 1 Julien Isorce 2014-11-25 08:26:06 UTC
Created attachment 291437 [details] [review]
mpegts: fix some compiler warnings
Comment 2 Edward Hervey 2014-11-25 09:25:16 UTC
commit 857456b7bae6511f9c7ed97fb441c4b87c0dec24
Author: Julien Isorce <j.isorce@samsung.com>
Date:   Tue Nov 25 08:24:16 2014 +0000

    mpegts: fix some compiler warnings
    
    i686-apple-darwin11-llvm-gcc-4.2 (GCC) 4.2.1
    
    "warning: comparison is always true due to limited
    range of data type"
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740674